--- a/ECM2434/Ecolution/static/styles.css
+++ b/ECM2434/Ecolution/static/styles.css
@@ -515,3 +515,20 @@ img.profile_pic {
     border-radius: 50%;
     border: 5px solid var(--color_light);
 }
+
+.form-group-horizontal {
+    display: flex;
+    align-items: center; /* vertically center input and label */
+    margin-bottom: 0.8rem;
+}
+  
+.form-group-horizontal label {
+    width: 140px; /* or whatever fixed width you prefer for the label */
+    margin-right: 0.5rem;
+}
+  
+  .form-group-horizontal input {
+    flex: 1; /* take up remaining space */
+    padding: 0.4rem;
+    box-sizing: border-box;
+}
