--- a/ECM2434/Ecolution/templates/base.html
+++ b/ECM2434/Ecolution/templates/base.html
@@ -69,6 +69,7 @@
 
     {% block additional %}
         <!-- Any Additional Content (Scripts, etc.) -->
+        <script src="{% static 'js/taskActions.js' %}"></script>
     {% endblock %}
 
 </body>
