--- a/ECM2434/Ecolution/templates/home.html
+++ b/ECM2434/Ecolution/templates/home.html
@@ -40,41 +40,10 @@
             </div>
             <button class="button box_shadow text_light" type="button" onclick="window.location.href='{% url 'tasks' %}'">View All</button>
         </section>
-        <section class="card_task card box_shadow text_light">
-            <div class="content flex_h flex_fill_h flex_center flex_gap_std margin_sml">
-                <div class="task_icon flex_v flex_center">🌲</div>
-                <div class="flex_v flex_v_fill ">
-                    <h3>Task Title</h3>
-                    <p class="task_description">Task Description</p>
-                </div>
-                <button class="button_img_light flex_v flex_center" type="button" onclick="toggleMenu()">
-                    <img src="/static/images/icon_button.png" alt="Settings">
-                </button>
-            </div>
-        </section>
-        <section class="card_task card box_shadow text_light">
-            <div class="content flex_h flex_fill_h flex_center flex_gap_std margin_sml">
-                <div class="task_icon flex_v flex_center">♻️</div>
-                <div class="flex_v flex_v_fill ">
-                    <h3>Task Title</h3>
-                    <p class="task_description">Task Description</p>
-                </div>
-                <button class="button_img_light flex_v flex_center" type="button" onclick="toggleMenu()">
-                    <img src="/static/images/icon_button.png" alt="Settings">
-                </button>
-            </div>
-        </section>
-        <section class="card_task card box_shadow text_light">
-            <div class="content flex_h flex_fill_h flex_center flex_gap_std margin_sml">
-                <div class="task_icon flex_v flex_center">🚀</div>
-                <div class="flex_v flex_v_fill ">
-                    <h3>Task Title</h3>
-                    <p class="task_description">Task Description</p>
-                </div>
-                <button class="button_img_light flex_v flex_center" type="button" onclick="toggleMenu()">
-                    <img src="/static/images/icon_button.png" alt="Settings">
-                </button>
-            </div>
-        </section>
+        {% for user_task in user_tasks %}
+            {% include 'partials/task_card.html' with user_task=user_task %}
+        {% empty %}
+            <p>No tasks available.</p>
+        {% endfor %}
     </section>
 {% endblock %}
